testsuite/poke.pkl/attr-diag-6.pk
/* { dg-do compile } */

var a =
  [1,2,3]'elem; /* { dg-error "argument" } */
